--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <style>
       html {
         overflow: hidden;
+        cursor: none;
       }
       body {
         margin: 0;
       }
     </style>
+    <title>Dancing Ribbons</title>
   </head>
 
   <body>
